update ne