@@ -1,94 +1,9 @@
-// package com.qd.configs;
-
-// import org.springframework.beans.factory.annotation.Autowired;
-// import org.springframework.context.annotation.Bean;
-// import org.springframework.context.annotation.Configuration;
-// import org.springframework.context.annotation.EnableAspectJAutoProxy;
-// import org.springframework.security.authentication.AuthenticationManager;
-// import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
-// import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
-// import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-// import org.springframework.security.config.http.SessionCreationPolicy;
-// import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-// import org.springframework.security.crypto.password.PasswordEncoder;
-// import org.springframework.security.web.SecurityFilterChain;
-// import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-// import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
-
-// @Configuration
-// @EnableWebSecurity
-// @EnableMethodSecurity
-// @EnableAspectJAutoProxy ///Quét @PreAuthorize và Custom Annotation
-// public class WebSecurityConfig {
-//     @Autowired
-//     private JwtAuthenticationFilter jwtAuthenticationFilter;
-
-//     @Bean
-//     public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-//         return authConfig.getAuthenticationManager();
-//     }
-//     @Bean
-//     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//         // http.cors(cors -> cors.disable())
-//         //     .csrf(csrf -> csrf.disable())
-//         //     .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-//         //     .authorizeHttpRequests(auth -> auth
-//         //         .requestMatchers(new AntPathRequestMatcher("/**")).permitAll()
-//         //     );
-
-//             http.cors(cors -> cors.disable())
-//             .csrf(csrf -> csrf.disable())
-//             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-
-//             .authorizeHttpRequests(auth -> auth
-
-//                 .requestMatchers(new AntPathRequestMatcher("/api/auth/register")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/auth/login")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/services/**", "GET")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/orders/webhook-callback")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/css/**")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/js/**")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/images/**")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/webjars/**")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/services/cart/**")).permitAll()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/services/callback", "POST")).permitAll()
-
-//                 // .requestMatchers(new AntPathRequestMatcher("/api/customer/services/*/reviews", "GET")).permitAll()
-
-//                 .requestMatchers(new AntPathRequestMatcher("/api/admin/**")).hasRole("ADMIN")
-//                 .requestMatchers(new AntPathRequestMatcher("/api/analytics/admin/**")).hasRole("ADMIN")
-
-//                 .requestMatchers(new AntPathRequestMatcher("/api/provider/**")).hasRole("PROVIDER")
-
-//                 .requestMatchers(new AntPathRequestMatcher("/api/cart/**")).hasRole("CUSTOMER")
-//                 .requestMatchers(new AntPathRequestMatcher("/api/orders/customer/**")).hasRole("CUSTOMER")
-//                 .requestMatchers(new AntPathRequestMatcher("/api/reviews", "POST")).hasRole("CUSTOMER")
-//                 .requestMatchers(new AntPathRequestMatcher("/api/customer/**")).hasRole("CUSTOMER")
-//                 .requestMatchers(new AntPathRequestMatcher("/api/services/orders", "POST")).hasRole("CUSTOMER")
-
-//                 .requestMatchers(new AntPathRequestMatcher("/api/auth/profile/**")).authenticated()
-//                 .requestMatchers(new AntPathRequestMatcher("/api/chat/**")).authenticated()
-
-//                 .anyRequest().authenticated()
-//             );
-//         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-//         return http.build();
-//     }
-
-//     @Bean
-//     public PasswordEncoder passwordEncoder() {
-//         return new BCryptPasswordEncoder();
-//     }
-// }
-
 package com.qd.configs;
 
+import java.util.List;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.context.annotation.EnableAspectJAutoProxy;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -103,10 +18,7 @@ import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
+import org.springframework.context.annotation.EnableAspectJAutoProxy;
 
 @Configuration
 @EnableWebSecurity
@@ -123,70 +35,96 @@ public class WebSecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        // Cấu hình CORS sử dụng Bean corsConfigurationSource bên dưới
+
+        // Kích hoạt CORS và cấu hình theo Bean corsConfigurationSource() bên dưới
         http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
+                .csrf(csrf -> csrf.disable()) // Tắt CSRF vì dự án sử dụng Token (Stateless)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
                 .authorizeHttpRequests(auth -> auth
+                        // 1. Cho phép tất cả các Preflight Request (OPTIONS) đi qua tự do
+                        // Điều này cực kỳ quan trọng để trình duyệt không bị chặn và gây lỗi 404 ảo
+                        .requestMatchers(new AntPathRequestMatcher("/**", "OPTIONS")).permitAll()
+
+                        // 2. Nhóm Public (Ai cũng có thể truy cập mà không cần Token)
                         .requestMatchers(new AntPathRequestMatcher("/api/auth/register")).permitAll()
                         .requestMatchers(new AntPathRequestMatcher("/api/auth/login")).permitAll()
-                        .requestMatchers(new AntPathRequestMatcher("/api/services/**", "GET")).permitAll()
+                        .requestMatchers(new AntPathRequestMatcher("/api/services/**", "GET")).permitAll() // Cho phép
+                                                                                                           // xem danh
+                                                                                                           // sách dịch
+                                                                                                           // vụ công
+                                                                                                           // khai
                         .requestMatchers(new AntPathRequestMatcher("/api/orders/webhook-callback")).permitAll()
                         .requestMatchers(new AntPathRequestMatcher("/css/**")).permitAll()
                         .requestMatchers(new AntPathRequestMatcher("/js/**")).permitAll()
                         .requestMatchers(new AntPathRequestMatcher("/images/**")).permitAll()
                         .requestMatchers(new AntPathRequestMatcher("/webjars/**")).permitAll()
-                        .requestMatchers(new AntPathRequestMatcher("/api/services/cart/**")).permitAll()
-                        .requestMatchers(new AntPathRequestMatcher("/api/services/callback", "POST")).permitAll()
 
+                        // 3. Nhóm Admin Site (Yêu cầu quyền ADMIN)
                         .requestMatchers(new AntPathRequestMatcher("/api/admin/**")).hasRole("ADMIN")
                         .requestMatchers(new AntPathRequestMatcher("/api/analytics/admin/**")).hasRole("ADMIN")
 
+                        // 4. Nhóm Đối tác (Yêu cầu quyền PROVIDER)
                         .requestMatchers(new AntPathRequestMatcher("/api/provider/**")).hasRole("PROVIDER")
 
+                        // 5. Nhóm Khách hàng (Yêu cầu quyền CUSTOMER)
                         .requestMatchers(new AntPathRequestMatcher("/api/cart/**")).hasRole("CUSTOMER")
                         .requestMatchers(new AntPathRequestMatcher("/api/orders/customer/**")).hasRole("CUSTOMER")
                         .requestMatchers(new AntPathRequestMatcher("/api/reviews", "POST")).hasRole("CUSTOMER")
-                        .requestMatchers(new AntPathRequestMatcher("/api/customer/**")).hasRole("CUSTOMER")
-                        .requestMatchers(new AntPathRequestMatcher("/api/services/orders", "POST")).hasRole("CUSTOMER")
 
+                        // 6. Nhóm Yêu cầu đăng nhập nói chung (Bất kỳ ai đăng nhập thành công đều vào
+                        // được)
                         .requestMatchers(new AntPathRequestMatcher("/api/auth/profile/**")).authenticated()
                         .requestMatchers(new AntPathRequestMatcher("/api/chat/**")).authenticated()
 
+                        // Tất cả các request phát sinh khác chưa khai báo ở trên đều phải đăng nhập
                         .anyRequest().authenticated());
 
+        // Đính kèm Filter kiểm tra JWT trước khi request đi vào Filter xác thực mặc
+        // định của Spring
         http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
+        CorsConfiguration config = new CorsConfiguration();
 
-        // Cấu hình các domain được phép truy cập
+        // Đăng ký toàn bộ các Domain được phép gọi trực tiếp vào hệ thống Backend này
         config.setAllowedOrigins(List.of(
-                "http://localhost:3000",
-                "https://travel-vista-frontend-ten.vercel.app",
+                "http://localhost:3000", // Môi trường phát triển Local của Frontend
+                "https://travel-vista-frontend-ten.vercel.app/" // Trang Frontend chính thức chạy trên Vercel // chéo)
         ));
 
-        // Cho phép tất cả các HTTP Methods phổ biến (GET, POST, PUT, DELETE,...)
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        // Cho phép các phương thức HTTP cơ bản
+        config.setAllowedMethods(List.of(
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"));
 
-        // Cho phép tất cả các Headers (Authorization, Content-Type,...)
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Cache-Control"));
+        // Cho phép các Header quan trọng, đặc biệt là Authorization (chứa JWT Token)
+        config.setAllowedHeaders(List.of(
+                "Authorization",
+                "Content-Type",
+                "Accept"));
 
-        // Cho phép gửi kèm Credentials (ví dụ: Cookies, JWT trong header,...)
-        configuration.setAllowCredentials(true);
+        // Bắt buộc bằng true nếu Frontend cần gửi kèm Cookie hoặc Header Authorization
+        // (JWT)
+        config.setAllowCredentials(true);
 
-        // Áp dụng cấu hình CORS này cho toàn bộ các endpoint (/**)
+        // Áp dụng cấu hình CORS này cho mọi đường dẫn (/**) trong hệ thống
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/**", config);
+
         return source;
     }
 
     @Bean
     public PasswordEncoder passwordEncoder() {
+        // Sử dụng thuật toán BCrypt để mã hóa mật khẩu người dùng trong DB
         return new BCryptPasswordEncoder();
     }
 }
